# Unity-Micro-Lib

./: .gitignore  CMakeLists.txt  README.md  Simulatie.sln  library.h  macros.h
Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Unity_Link_Test.sln  Unity_Link_Test.vcxproj  Unity_Link_Test.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Builds/Debug/: Unity_Link_Test.exp
Builds/Unity_Link_Test.dir/Debug/: SimpleObjectDetector.cpp.ifc.dt.d.json  SimpleObjectDetector.cpp.ifc.dt.module.json  SimpleObjectDetector.cpp.ifc.dt.module.json.command  SimpleObjectDetector.h_3B4A4B0F4996B934.ifc.dt.d.json  SimpleObjectDetector.h_3B4A4B0F4996B934.ifc.dt.module.json  SimpleObjectDetector.h_3B4A4B0F4996B934.ifc.dt.module.json.command  SimulatorMotorController.cpp.ifc.dt.d.json  SimulatorMotorController.cpp.ifc.dt.module.json  SimulatorMotorController.cpp.ifc.dt.module.json.command  SimulatorPositionTracker.cpp.ifc.dt.d.json  SimulatorPositionTracker.cpp.ifc.dt.module.json  SimulatorPositionTracker.cpp.ifc.dt.module.json.command  Unity_Link_Test.dll.recipe  Unity_Link_Test.ilk  WallFollowerRobotcontroller.cpp.ifc.dt.d.json  WallFollowerRobotcontroller.cpp.ifc.dt.module.json  WallFollowerRobotcontroller.cpp.ifc.dt.module.json.command  WallFollowerRobotcontroller.h_42584806F1CE72A2.ifc.dt.d.json  WallFollowerRobotcontroller.h_42584806F1CE72A2.ifc.dt.module.json  WallFollowerRobotcontroller.h_42584806F1CE72A2.ifc.dt.module.json.command  algorithms.cpp.ifc.dt.d.json  algorithms.cpp.ifc.dt.module.json  algorithms.cpp.ifc.dt.module.json.command  algorithms.cpp.module.json  com.cpp.ifc.dt.d.json  com.cpp.ifc.dt.module.json  com.cpp.ifc.dt.module.json.command  com.cpp.module.json  library.cpp.ifc.dt.d.json  library.cpp.ifc.dt.module.json  library.cpp.ifc.dt.module.json.command  library.cpp.module.json  microsim.cpp.ifc.dt.d.json  microsim.cpp.ifc.dt.module.json  microsim.cpp.ifc.dt.module.json.command  microsim.cpp.module.json  simpleobjectdetector.cpp.module.json  simulatormotorcontroller.cpp.module.json  simulatorpositiontracker.cpp.module.json  types.cpp.ifc.dt.d.json  (+7 more)
Builds/Unity_Link_Test.dir/Debug/Unity_Link_Test.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+8 more)
Unity Link Test/: Unity Link Test.vcxproj  Unity Link Test.vcxproj.filters  com.h  framework.h  interfaces.h  pch.h
algorithms/: SimulatorMotorController.cpp  SimulatorPositionTracker.cpp  algorithms.h  testObjectDetector.cpp
com/: com.cpp  com.h
examples/Astar/: Astar.cpp  Astar.h
examples/Dijkstra/: Dijkstra.cpp  Dijkstra.h
examples/Floodfill/: Floodfill.cpp  Floodfill.h
examples/FloodfillStack/: FloodfillStack.cpp  FloodfillStack.h
examples/MMarc/: MMarc.cpp  MMarc.h
examples/ObjectDetection/: Direction.h  Objectdetection.cpp  Objectdetection.h
examples/RandomDirectionMover/: RandomDirectionMover.cpp  RandomDirectionMover.h
examples/SimpleObjectDetector/: SimpleObjectDetector.cpp  SimpleObjectDetector.h
examples/Tawc/: Tawc.cpp  Tawc.h
examples/Tawd/: Tawd.cpp  Tawd.h
examples/WallFollower/: WallFollowerRobotcontroller.cpp  WallFollowerRobotcontroller.h
interface/: interface.cpp  interface.h
microsim/: microsim.cpp  microsim.h
types/: types.cpp  types.h
(+7 files in other folders)
